--- a/FormatMoney.html
+++ b/FormatMoney.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
-   <body>
-      <h2>Challenge for Pleo</h2>
-      <label>Please input a numeric value to be formatted:</label>
-      <br />
-      <input id="inputValue" type="text" placeholder="amount" />
-      <br />
-      <button type="button" id="myButton">Submit</button>
-      <p id="letsGo"></p>
+   <head>
+      <meta charset="utf-8"/>
+      <title>Challenge for Pleo</title>
+   </head>
+   <body style="background-color:#FAEBD7;">
+      <div style="text-align:center">
+         <img src="https://upload.wikimedia.org/wikipedia/commons/4/48/Twelve_Labours_Altemps_Inv8642.jpg" width="500px"/>
+         <br /><p />
+         <h2>Challenge for Pleo</h2>
+         <label>Please input a numeric value to be formatted:</label>
+         <br /><p />
+         <input id="inputValue" type="text" placeholder="amount" />
+         <button type="button" id="myButton">Submit</button>
+         <p id="letsGo"></p>
+      </div>
       <script>
          function checkValue(){
              while(true){
